---
source: server/tests/book.rs
expression: read_snapshot(&log_dir)
---
BookCreatePayload {
    title: "Cinderella",
    access_token: "admin@admin.com",
}
UserCreatePayload {
    email: "first@user.com",
    access_mask: 1,
    requester_access_token: None,
}
UserCreatePayload {
    email: "second@user.com",
    access_mask: 1,
    requester_access_token: None,
}
BookBorrowByTitlePayload {
    title: "Cinderella",
    borrow_length: 86400,
    borrow_id: "first@user.com",
}
BookEndBorrowByTitlePayload {
    title: "Cinderella",
    access_token: "second@user.com",
}
BookEndBorrowByTitlePayload {
    title: "Cinderella",
    access_token: "first@user.com",
}
BookBorrowByTitlePayload {
    title: "Cinderella",
    borrow_length: 86400,
    borrow_id: "second@user.com",
}
UserCreatePayload {
    email: "librarian@user.com",
    access_mask: 17,
    requester_access_token: Some(
        "admin@admin.com",
    ),
}
BookEndBorrowByTitlePayload {
    title: "Cinderella",
    access_token: "librarian@user.com",
}
